find groups by country code working
